Fix search bar overflowing in ProfileTabs component

--- a/src/Components/ProfileTabs/ProfileTabs.scss
+++ b/src/Components/ProfileTabs/ProfileTabs.scss
@@ -62,7 +62,8 @@
       }
 
       .search-bar-container {
-        width: 30rem;
+        width: 100%;
+        max-width: 30rem;
         height: fit-content;
         display: grid;
         grid-template-rows: 1fr;
